--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ html {
 <body class=" dark:bg-black transition-colors duration-300">
 
   <!-- Header/Navbar -->
-  <header class="bg-transparent dark:bg-gray-800 shadow fixed top-0 w-full z-50">
+  <header class="bg-transparent dark:bg-gray-800  fixed top-0 w-full z-50">
 
     <nav class="max-w-6xl mx-auto px-4 py-4 flex flex-wrap items-center justify-between gap-y-4">
       <h1 class="text-blue-400 font-semibold"><i class="fa-solid fa-paper-plane"></i> jeeva</h1>
@@ -147,7 +147,7 @@ html {
   <!-- About Section -->
   <section id="about">
     <div
-      class="w-[calc(100vw-100px)] h-screen mx-auto px4 py-20 flex flex-col items-center justify-center text-left bg-gray-800 rounded-2xl mt-20">
+      class="w-[calc(100vw-100px)] h-screen mx-auto px4 py-20 flex flex-col items-center justify-center text-left bg-gray-800 rounded-2xl  mt-20">
       <h1 class="text-cyan-300 font-bold text-3xl reveal">About</h1>
       <p class="text-base reveal max-w-4xl mx-auto pl-4 sm:pl-0">i'm a passionate Fullstack developer who loves blending <br>creativity with logic to build seamless digital
         experience<br>
