--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ html {
 <body class=" dark:bg-black transition-colors duration-300">
 
   <!-- Header/Navbar -->
-  <header class="bg-transparent dark:bg-gray-800  fixed top-0 w-full z-50">
+  <header class="bg-transparent dark:bg-black fixed top-0 w-full z-50">
 
     <nav class="max-w-6xl mx-auto px-4 py-4 flex flex-wrap items-center justify-between gap-y-4">
       <h1 class="text-blue-400 font-semibold"><i class="fa-solid fa-paper-plane"></i> jeeva</h1>
